--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -4,5 +4,8 @@
 - id: Edit this page
   translation: Edit this page
 
+- id: Last modified by
+  translation: Last modified by
+
 - id: bookSearchConfig
   translation: '{ cache: true }'
