Rework of main template, adds options for more fine customisation

--- a/i18n/cn.yaml
+++ b/i18n/cn.yaml
@@ -7,6 +7,9 @@
 - id: Last modified by
   translation: Last modified by
 
+- id: Expand
+  translation: Expand
+
 - id: bookSearchConfig
   translation: |
     {
