--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -7,5 +7,8 @@
 - id: Last modified by
   translation: Última modificación por
 
+- id: Expand
+  translation: Expand
+
 - id: bookSearchConfig
   translation: '{ cache: true }'
