--- a/i18n/cn.yaml
+++ b/i18n/cn.yaml
@@ -2,13 +2,13 @@
   translation: 搜索
 
 - id: Edit this page
-  translation: Edit this page
+  translation: 编辑本页
 
 - id: Last modified by
-  translation: Last modified by
+  translation: 最后修改者
 
 - id: Expand
-  translation: Expand
+  translation: 展开
 
 - id: bookSearchConfig
   translation: |
