--- a/i18n/tr.yaml
+++ b/i18n/tr.yaml
@@ -5,7 +5,7 @@
   translation: Bu sayfayı düzenle
 
 - id: Last modified by
-  translation: Son düzenleyen:
+  translation: Son düzenleyen
 
 - id: Expand
   translation: Genişlet
