--- a/i18n/cn.yaml
+++ b/i18n/cn.yaml
@@ -16,6 +16,6 @@
     {
       encode: false,
       tokenize: function(str) {
-        return str.replace(/[\x00-\x7F]/g, '').split('');
+        return str.match(/([A-Za-z0-9]+|[^\x00-\x7F]{1})/g).map(word => word.toLowerCase());
       }
     }
