--- a/i18n/de.yaml
+++ b/i18n/de.yaml
@@ -12,3 +12,9 @@
 
 - id: bookSearchConfig
   translation: '{ cache: true }'
+
+- id: home
+  translation: Startseite
+
+- id: about
+  translation: Über
